--- a/extensions/checkout_passive/templates.html
+++ b/extensions/checkout_passive/templates.html
@@ -55,7 +55,7 @@ chkoutCartContents - will get loaded with the productListTemplateContentsSummary
 
 <ul id='checkoutStuffList' data-bind="var: cart(@ITEMS); format:stuffList; loadsTemplate:productListTemplateCheckout;" class='listStyleNone fluidList clearfix noPadOrMargin productList lineItemProdlist'></ul>	
 
-<section id='checkoutTemplateCostSummary' class='cartSummary'>
+<section id='checkoutTemplateCostSummary' class='cartSummary floatRight'>
 
 	<div data-bind="var: cart(sum/items_total); format:money; className:orderSubtotal; hideZero:false; currencySign: $; pretext:Subtotal: ; "></div>
 
