Order invoice background

--- a/extensions/checkout_active/templates.html
+++ b/extensions/checkout_active/templates.html
@@ -336,7 +336,7 @@ do NOT change the input name or id or checkout will likely break.
 
 <!-- used after a successful checkout.  -->
 
-<div id='checkoutSuccess' class='checkoutSuccess'>
+<div id='checkoutSuccess' class='checkoutSuccess contentContainer'>
 
 	<div class='floatRight ocmThirdParty'>
 		<h2 id='ocmPrompt'>What would you like to do next?</h2>
