Open Preview Dialog inline

--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 	</tr>
 	</table>
 </div>
-
+<script type="text/javascript">
+$("#appPreView").dialog({
+		'modal':true,
+		'closeOnEscape' : false,
+		'dialogClass' : 'hideDialog',
+		'width' : 650
+	});
+</script>
 
 
 <div id='appView'>
