--- a/index.html
+++ b/index.html
@@ -1337,15 +1337,22 @@ So the cart template should contain these two elements and the extension should 
 		<div class='cartSummaryContainer'>
 
 <section id='cartTemplateCostSummary' class='cartSummary'>
-
+	<div data-bind="var: cart(sum/items_total); format:showIfSet;" class="displayNone">
 	<div data-bind="var: cart(sum/items_total); format:money; className:orderSubtotal; hideZero:false; currencySign: $; pretext:Subtotal: ; "></div>
-
+	</div>
+	
+	<div data-bind="var: cart(sum/tax_total); format:showIfSet;" class="displayNone">
 	<div data-bind='var: cart(sum/tax_total); format:money; className:orderTax; hideZero:true;currencySign: $; pretext:Tax: ; posttext: (PA or NY only);'></div>
-
+	</div>
+	
+	<div data-bind="var: cart(want/shipping_id); format:showIfSet;" class="displayNone">
 	<div data-bind='var: cart(want/shipping_id); format:shipInfoById; className:orderShipping; hideZero:false; extension:store_cart;'></div>
-
+	</div>
+	
+	<div data-bind="var: cart(sum/order_total); format:showIfSet;" class="displayNone">
 	<div data-bind='var: cart(sum/order_total); format:money; className:orderTotal; hideZero:false; currencySign: $; pretext:Order Total: ; '></div>
-<!--
+	</div>
+	<!--
 	<div data-bind='var: cart(sum/gfc_total); format:money; className:orderGiftcardTotal; hideZero:false; currencySign: $; pretext:Giftcard(s): ; '></div>
 	<div data-bind='var: cart(sum/pnt_total); format:money; className:rewardPointsTotal; hideZero:false; currencySign: $; pretext:Reward Points: ; '></div>
 	<div data-bind='var: cart(sum/rmc_total); format:money; className:returnsCreditTotal; hideZero:false; currencySign: $; pretext:Returns Credit: ; '></div>
@@ -1367,16 +1374,18 @@ So the cart template should contain these two elements and the extension should 
 	app.ext.store_cart.u.updateCartSummary();
 	app.ext.store_cart.calls.cartShippingMethodsWithUpdate.init();
 	app.model.dispatchThis('immutable');"  />
-	<button class='ui-button-text ui-button ui-state-default ui-corner-all' onClick="return false;">Go!</button>
+	<button class='goBtn ui-button-text ui-button ui-state-default ui-corner-all' onClick="return false;">Go!</button>
 	
 	<div>(Estimates for U.S. only, international shipping rates available in checkout!)</div>
 	</div>
 
 
 	<!-- some buttons that are alternatives to checkout. fewer is better -->
+	<!--
 	<menu class='cartAltButtonsContainer noPadOrMargin'>
 	<button class='ui-button-text ui-button ui-state-default ui-corner-all continueShoppingButton' onClick="$('#modalCart').dialog('close');">Continue Shopping</button>
 	</menu>
+	-->
 
 	<div class='checkoutButtonsContainer'>
 		<span>
