--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ addthis_id = 'gkworld';
 
 
 var app = {vars:{
-	"release":"20130318094400",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130320093100",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
-	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
-	"httpURL":"http://www.gkworld.com/"
-//	"httpsURL":"https://www-9c0a9a-snap-zoovy-net.app-hosted.com/s=app.9c0a9a.snap.zoovy.net/",
-//	"httpURL":"http://app.9c0a9a.snap.zoovy.net/"
+//	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
+//	"httpURL":"http://www.gkworld.com/"
+	"httpsURL":"https://www-9c0a9a-snap-zoovy-net.app-hosted.com/s=app.9c0a9a.snap.zoovy.net/",
+	"httpURL":"http://app.9c0a9a.snap.zoovy.net/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
