API fail message tested, reformatted.

--- a/index.html
+++ b/index.html
@@ -272,6 +272,14 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 		<div class='floatLeft'>Copyright &copy; 2012. All Rights Reserved. <a href='#company?show=privacy' class='bindByAnchor'>Please read our privacy policy</a></div>
 		<div class='floatRight'></div>
 	</div>
+<!--
+<div id="errTest">test</div>
+<script type="text/javascript">
+	$('#errTest').click(function(){
+		app.u.throwMessage("Sorry, but our API request is in another castle!  Looks like our servers are a little backed up at the moment, why don't you <a href='#' onClick='location.reload()'>give it another shot?</a>  If you're seeing this bad joke for the second time, how about you <a href='#' onClick='return showContent(\"company\",{\"show\":\"contact\"});'>call us instead?</a>", true);
+	});
+</script>
+-->
 </div>
 </div>
 
