Google site verification added to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta property="og:image" content="" id='ogImage' />
 <meta property="og:description" content="" id='ogDescription' />
 
+<meta name="google-site-verification" content="RocDHoxdZ5C6h7toQW4iO-FOE4fpEIGCh-lFA6yQVSA" />
 
 <base href='' /><!-- leave blank so it works for a local file -->
 
