Messaging contact us button added

--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@ So the cart template should contain these two elements and the extension should 
 	<div data-bind='var: cart(sum/balance_due_total); format:orderBalance; className:orderBalanceDue; hideZero:false; currencySign: $; pretext:Estimated Total: ; extension:store_cart;'></div>
 -->
 </section>
-
+	<div id="cartChat" class="floatRight"></div>
 	<div class='checkoutButtonsContainer'>
 		<span title='proceed to secure checkout'><button class='ui-button ui-button-text ui-state-default ui-corner-all checkoutButton' onClick="showContent('checkout',{});">Store Checkout</button></span>
 		
