--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ $("#appPreView").dialog({
 		
 		<span class='section'>
 <!-- <a href='#customer?show=lists' class='bindByAnchor'>Wish List</a> | -->
-<a href='#customer?show=myaccount' class='bindByAnchor'>My Account</a> | 
-<a href='#customer?show=newsletter' class='bindByAnchor'>Register</a> | 
-<a href='#company?show=contact' class='bindByAnchor'>Contact</a> 
+<a href='#!customer?show=myaccount' class='bindByAnchor'>My Account</a> | 
+<a href='#!customer?show=newsletter' class='bindByAnchor'>Register</a> | 
+<a href='#!company?show=contact' class='bindByAnchor'>Contact</a> 
 		</span>
 
 		<!-- <span class='section socialIcons'>
@@ -153,7 +153,7 @@ $("#appPreView").dialog({
 
 <div id='mastHead' class='contentWidth'>
 
-	<div class='logo'><a href='#category?navcat=.' class='bindByAnchor'><img src='images/logo-369x84.png' width='369' height='84' alt='GKWorld.com' /></a></div>
+	<div class='logo'><a href='#!category?navcat=.' class='bindByAnchor'><img src='images/logo-369x84.png' width='369' height='84' alt='GKWorld.com' /></a></div>
 
 	<div class='minicart bevelBox pointer' onClick="showContent('cart',{})">
 		<span class='spriteBG cartIcon'></span>
@@ -167,7 +167,7 @@ $("#appPreView").dialog({
 		<span class='phone'>1.570.832.4571</span>
 	</div>
 
-	<a class="chatLink" onClick="return showContent('company',{'show':'contact'});">
+	<a class="chatLink bindByAnchor" href="#!company?show=contact">
 		<div class='chatContainer spriteBG'>Chat</div>
 	</a>
 
@@ -181,37 +181,37 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 	<ul id='nav'>
 		
 		<li>
-			<a href='#top' class='topCat' onClick="showContent('category',{'navcat':'.buy.anime'});">Anime</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.anime">Anime</a>
 		</li>
 		
 		<li>
-			<a href='#top' class='topCat' onClick="showContent('category',{'navcat':'.buy.cartoons'});">Cartoons</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.cartoons">Cartoons</a>
 		</li>
 		
 		<li>
-			<a href='#top' class='topCat' onClick="return showContent('category',{'navcat':'.buy.comics'});">Comics</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.comics">Comics</a>
 		</li>
 		
 		<li>
-			<a href='#top' class='topCat' onClick="return showContent('category',{'navcat':'.buy.disney'});">Disney</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.disney">Disney</a>
 		</li>
 
 		
 		<li>
-			<a href='#top' class='topCat' onClick="return showContent('category',{'navcat':'.buy.movies'});">Movie / TV</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.movies">Movie / TV</a>
 		</li>
 
 		<li>
-			<a href='#top' class='topCat' onClick="return showContent('category',{'navcat':'.buy.music'});">Music</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.music">Music</a>
 		</li>
 
 		
 		<li>
-			<a href='#top' class='topCat' onClick="return showContent('category',{'navcat':'.buy.video-games'});">Video Games</a>
+			<a class='topCat bindByAnchor' href="#!category?navcat=.buy.video-games">Video Games</a>
 		</li>
 		
 		<li>
-			<a href='#top' class='noRightBorder topCat' onClick="return showContent('category',{'navcat':'.buy.more'});">More</a>
+			<a class='noRightBorder topCat bindByAnchor' href="#!category?navcat=.buy.more">More</a>
 		</li>
 	</ul>
 	
@@ -237,28 +237,28 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 			<div id='mastFooter' class='clearfix'>
 				<div class='section'>
 		<h4>Information</h4>
-		<a href='#company?show=contact' class='bindByAnchor'>Contact</a>
-		<a href='#company?show=shipping' class='bindByAnchor'>Delivery</a>
-		<a href='#company?show=privacy' class='bindByAnchor'>Legal Notice</a>
-		<a href='#category?navcat=.termsofuse' class='bindByAnchor'>Terms and conditions</a>
-		<a href='#company?show=about' class='bindByAnchor'>About us</a>
+		<a href='#!company?show=contact' class='bindByAnchor'>Contact</a>
+		<a href='#!company?show=shipping' class='bindByAnchor'>Delivery</a>
+		<a href='#!company?show=privacy' class='bindByAnchor'>Legal Notice</a>
+		<a href='#!category?navcat=.termsofuse' class='bindByAnchor'>Terms and conditions</a>
+		<a href='#!company?show=about' class='bindByAnchor'>About us</a>
 
 
 				</div>
 				<div class='section'>
 		<h4>Your Account</h4>
-		<a href='#customer?show=myaccount' class='bindByAnchor'>Account</a>
-		<a href='#customer?show=changepassword' class='bindByAnchor'>Change Password</a>
-		<a href='#customer?show=newsletter' class='bindByAnchor'>Newsletter</a>
-		<a href='#customer?show=orders' class='bindByAnchor'>Order History</a>
+		<a href='#!customer?show=myaccount' class='bindByAnchor'>Account</a>
+		<a href='#!customer?show=changepassword' class='bindByAnchor'>Change Password</a>
+		<a href='#!customer?show=newsletter' class='bindByAnchor'>Newsletter</a>
+		<a href='#!customer?show=orders' class='bindByAnchor'>Order History</a>
 				</div>
 				
 				<div class='section'>
 		<h4>Our Offers</h4>
-		<a href='#category?navcat=.weekly_special.new' class='bindByAnchor'>New Arrivals</a>
-		<a href='#category?navcat=.weekly_special.best_sellers' class='bindByAnchor'>Best Sellers</a>
-		<a href='#category?navcat=.weekly_special.gift_ideas' class='bindByAnchor'>Gift Ideas</a>
-		<a href='#category?navcat=.weekly_special.clearance' class='bindByAnchor'>Clearance</a>
+		<a href='#!category?navcat=.weekly_special.new' class='bindByAnchor'>New Arrivals</a>
+		<a href='#!category?navcat=.weekly_special.best_sellers' class='bindByAnchor'>Best Sellers</a>
+		<a href='#!category?navcat=.weekly_special.gift_ideas' class='bindByAnchor'>Gift Ideas</a>
+		<a href='#!category?navcat=.weekly_special.clearance' class='bindByAnchor'>Clearance</a>
 
 
 		</div>
@@ -270,7 +270,7 @@ $(this).closest('.subcatContainer').css({'left':'-9999px'}); setTimeout(function
 		</div>
 	</div>
 	<div class='afterFooter clearfix'>
-		<div class='floatLeft'>Copyright &copy; 2012. All Rights Reserved. <a href='#company?show=privacy' class='bindByAnchor'>Please read our privacy policy</a></div>
+		<div class='floatLeft'>Copyright &copy; 2012. All Rights Reserved. <a href='#!company?show=privacy' class='bindByAnchor'>Please read our privacy policy</a></div>
 		<div class='floatRight'></div>
 	</div>
 <!--
