--- a/app-admin.html
+++ b/app-admin.html
@@ -26,7 +26,7 @@ else {
 
 var app = {vars:{
 	/////////////////////////////////\
-	"release":"201308.f",   ///|> Increment this with each change. should solve caching issues. format: YYYYMMDD.X where X starts at 1 and is incremented w/ each daily change.
+	"release":"201314.b",   ///|> Increment this with each change. model version followed by each deployed update getting a new letter in the alphabet.
 	//////////////////////////////////
 	"thisSessionIsAdmin": true,
 	"_clientid":"admin",
@@ -61,7 +61,7 @@ css files should be included before any .js file to ensure they are downloaded i
 
 
 <script type="text/javascript">
-app.u.loadScript(app.vars.baseURL+"admin_init.js");
+app.u.loadScript(app.vars.baseURL+"app-admin-init.js");
 </script>
 
 
@@ -95,7 +95,7 @@ app.u.loadScript(app.vars.baseURL+"admin_init.js");
 	<div class='logo alignCenter'><a href="/index.html"><img src='extensions/admin/images/zoovy_logo-173x30.png' width='173' height='30' alt='zoovy' /></a></div>
 
 	<div class='appMessaging'></div>
-	
+
 	<div id='loginFormContainer'>
 		<form name='merchantLogin' id='merchantLogin' action='#' class='clearfix marginBottom'>
 		<fieldset class='labelsAsBreaks alignedInputs alignedLabels'>
@@ -107,7 +107,7 @@ app.u.loadScript(app.vars.baseURL+"admin_init.js");
 			<button class='loginbutton floatRight' data-app-event="admin|accountLogin">login</button>
 			<div class="hint">App Release #: <span id="appversion">??</span></div>
 			<label class='hint'><input type='checkbox' name='persitentAuth' value='1' checked='checked' /> Keep me logged in</label>
-			<div class="hint"><b><a href='/app/201304/admin.html'> &#187; Use previous version</a></b></div>
+			<div class="hint"><b><a href='/app/201312/admin.html'> &#187; Use previous version</a></b></div>
 
 		</fieldset>
 		</form>
@@ -174,7 +174,7 @@ app.u.loadScript(app.vars.baseURL+"admin_init.js");
 		</div>
 	
 		<div class='mhTabsContainer'>
-		<ul class='showIcons'>
+		<ul class='showIcons navIcons'>
 			<li class='toggleArrow alignCenter' onClick="app.ext.admin.a.toggleHeaderTabHeight()" title='Toggle this menu to be taller or shorter'>&#9650;</li>
 			<li class='setupTab' onClick="navigateTo('#:setup');"><span class='text'>Setup</span><span class='icon'></span></li>
 			<li class='sitesTab' onClick="navigateTo('#:sites');"><span class='text'>Sites</span><span class='icon'></span></li>
@@ -210,6 +210,19 @@ app.u.loadScript(app.vars.baseURL+"admin_init.js");
 		<div id='reportsContent' class='displayNone tabContent' data-section='reports'></div>
 		<div id='kpiContent' class='displayNone tabContent' data-section='kpi'></div>
 		<div id='utilitiesContent' class='displayNone tabContent' data-section='utilities'></div>
+		<div id='launchpadContent' class='displayNone tabContent' data-section='launchpad'>
+			<section id='launchpadTiles'>
+
+			</section>
+<!--
+				<li class='tileAdmin'><span class='tilename'>Admin</span></li>
+				<li class='tileDomainAdd' onClick="navigateTo('/biz/setup/domain/index.cgi?VERB=NEW');"><span class='tilename'>Add a New Domain</span></li>
+				<li class='tileProjectAdd'><span class='tilename'>Add a Project</span></li>
+				<li class='tileHelp' onClick="app.ext.admin.a.showHelpInterface($('#setupContent'));"><span class='tilename'>A little help here please?</span></li>
+				<li class='tileZoovyLive'></li>
+				<li class='tileZoovyCommunity' onClick="window.open('https://plus.google.com/communities/108928399105730273026');"></li>
+-->
+		</div>
 		<div id='jtContent' class='displayNone tabContent' data-section='jt'></div><!-- for testing -->
 	
 	</div>
@@ -312,45 +325,45 @@ These two pieces of data are used for mapping after the uploads to set what fold
 
 
 
-<div id='debugPanel' class='debug buttonset clearBoth clearAll clearfix'>
-	<div class='debugBG'></div>
-	<div class='debugContent'>
-
-<button onClick="localStorage.clear();">Nuke ALL LocalStorage</button>
-<button onClick="app.ext.admin.u.selectivelyNukeLocalStorage();">Nuke Selective LocalStorage</button>
-
-
-<button onClick="navigateTo('#!supplierManager');">Supplier Manager</button>
-<button onClick="navigateTo('#!appChooser');">App Chooser</button>
-<button onClick="app.model.destroy('adminCustomerDetail|7633554');">destroy customer</button>
-<button onClick="$('#setupContent').empty(); app.ext.admin_customer.a.showCustomerEditor($('#setupContent'),{'CID':'7633554'});">showCustomerEditor</button>
-
-<button onClick="$('#setupContent').empty(); app.ext.admin_customer.a.showCustomerManager($('#setupContent'));">customerManager</button>
-
-
-
-<button onClick="$('#setupContent').empty(); app.ext.admin.a.showAchievementList($('#setupContent'));">showAchievementList</button>
-
-<button onClick="$('#setupContent').empty(); app.ext.admin.a.showHelpInterface($('#setupContent'));">showHelpInterface</button>
-
-<button onClick="app.ext.admin.calls.adminEmailList.init({},'mutable'); app.model.dispatchThis('mutable');">adminEmailList</button>
-
+<div id='debugPanel' class='ui-widget ui-widget-content ui-corner-all smallPadding displayNone'>
+<h5>Debugificator</h5>
+<ul class='debugMenu'>
+	<li><a href='#'>Tools</a>
+	<ul>
+		<li><a href='#' onClick="app.ext.admin.u.selectivelyNukeLocalStorage();">Selectively Clear LocalStorage (keep login &amp; preferences)</a></li>
+		<li><a href='#' onClick="localStorage.clear();">Clear LocalStorage for domain</a></li>
+	</ul>
+	</li>
+	<li><a href='#'>Pages</a>
+	<ul>
+		<li><a href='#' onClick="navigateTo('#!launchpad');">Launchpad</a></li>
+		<li><a href='#' onClick="navigateTo('#!batchManager');">batchjobs</a></li>
+		<li><a href='#' onClick="navigateTo('#!supplierManager');">Supplier Manager</a></li>
+		<li><a href='#' onClick="navigateTo('#!appChooser');">App Chooser</a></li>
+		<li><a href='#' onClick="$('#setupContent').empty(); app.ext.admin.a.showAchievementList($('#setupContent'));">showAchievementList (in setup)</a></li>
+		<li><a href='#' onClick="$('#setupContent').empty(); app.ext.admin.a.showHelpInterface($('#setupContent'));">showHelpInterface (in setup)</a></li>
+	</ul>
+	</li>
+	<li><a href='#'>Test</a>
+	<ul>
+		<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminUIExecuteCGI','uri':'/biz/syndication/buycom/index.cgi'},'mutable'); app.model.dispatchThis('mutable');">UIExecCGI addDispatchToQ</a></li>
+		<li><a href='#' onClick="app.ext.admin.calls.adminUIExecuteCGI.init('/biz/syndication/buycom/index.cgi'); app.model.dispatchThis('mutable');">adminUIExecuteCGI call</a></li>
+		<li><a href='#' onClick="app.u.throwMessage('Something Wicked This Way Comes');">throwMessage</a></li>
+		
+	</ul>
+	</li>	
+</ul>
 
 <!--
 <button onClick="app.ext.admin.calls.appResource.init('email_macros.json',{},'mutable'); app.model.dispatchThis('mutable');">appResource</button>
 <button onClick="app.ext.admin.calls.appResource.init('shipcodes.json',{},'mutable'); app.model.dispatchThis('mutable');">shipcodes.json</button>
-
-<button onClick="app.ext.admin_orders.a.showOrderEditorInDialog('2013-01-550');">orderDetailsInDialog</button>
+<button onClick="app.ext.admin.calls.adminEmailList.init({},'mutable'); app.model.dispatchThis('mutable');">adminEmailList</button>
 <button onClick="app.model.addDispatchToQ({'_cmd':'adminDataQuery','query':'listing-active','since_gmt':app.u.unixNow() - (60*60*24*10)},'mutable'); app.model.dispatchThis('mutable');">adminDataQuery</button>
+<button onClick="app.ext.admin.calls.appConfig.init(); app.model.dispatchThis();">appConfig</button>
 
 -->
 
 
-<button onClick="app.ext.admin.calls.appConfig.init(); app.model.dispatchThis();">appConfig</button>
-
-<button onClick="app.ext.admin.u.handlePermissions($('#setupContent'),{'isVstore':true})">handlePermssions</button>
-
-	</div>
 </div>
 
 
@@ -370,32 +383,6 @@ This is content that isn't template worthy, but still necessary (most likely for
 -->
 
 
-
-<div id='achievementAddProductModal' class='achievementModal displayNone' title="Achievement: Add a product">
-
-	<table>
-	<tr>
-		<td></td>
-		<td>
-		<h2>Add some product to your store</h2>
-		<p>For the purpose of this achievement, there are three ways to get product into your store (in actuality, there are more).</p>
-		<ol>
-			<li>Using the product editor</li>
-			<li>Through a CSV import</li>
-			<li>Add test product</li>
-		</ol>
-		
-		<p>#1. This is the manual process, but fairly simple.  Click the product tab and then the 'create new' link on the left. Fill in the appropriate fields and press save. That's all there is to it. Once the product is created, go into the editor to add pictures and more detailed information.<br />
-		Watch | <a href='http://www.zoovy.com/webdoc/index.cgi?VERB=DOC&DOCID=50788' target='webdoc' class='webdoc'>Read</a></p>
-		<p>#2. For adding in bulk, this is the best way to do it. Prepare your CSV with the appropriate headers (described in the link below) and then import through setup > import tools.<br />
-		Watch | <a href='http://www.zoovy.com/webdoc/index.cgi?VERB=DOC&DOCID=50285' target="webdoc" class='webdoc'>Read</a></p>
-		<p>#3. By far the easiest method, but also the least likely to get you selling (good for testing purposes). Simply click the link below and we'll add a few sample product to your store.<br />
-		Watch | Read | Do It!</p>
-		</td>
-	</tr>
-	</table>
-
-</div>
 
 
 <div id='orderListTab' class='ui-widget ui-widget-content displayNone'>
