--- a/extensions/admin/orders.html
+++ b/extensions/admin/orders.html
@@ -28,7 +28,7 @@
 		<div data-ui-role='admin_orders|orderListFiltersUpdate'>
 			<section class='clearfix'>
 			<h4>Order Status:</h4>
-			<ul id='orderListFilterPool' class='noPadOrMargin filterGroup' data-filter='POOL'>
+			<ul id='orderListFilterPool' class='noPadOrMargin listStyleNone filterGroup' data-filter='POOL'>
 				<li data-filtervalue='RECENT' data-app-event='admin_orders|orderListFiltersUpdate'>Recent</li>
 				<li data-filtervalue='PENDING' data-app-event='admin_orders|orderListFiltersUpdate'>Pending</li>
 				<li data-filtervalue='REVIEW' data-app-event='admin_orders|orderListFiltersUpdate'>Review</li>
@@ -43,7 +43,7 @@
 
 			<section class='clearfix'>
 			<h4>Payment Status:</h4>
-			<ul id='orderListFilterPaymentStatus' class='noPadOrMargin filterGroup' data-filter='PAYMENT_VERB'>
+			<ul id='orderListFilterPaymentStatus' class='noPadOrMargin listStyleNone filterGroup' data-filter='PAYMENT_VERB'>
 				<li data-filtervalue='PAID' data-app-event='admin_orders|orderListFiltersUpdate'>Paid</li>
 				<li data-filtervalue='PENDING' data-app-event='admin_orders|orderListFiltersUpdate'>Pending</li>
 				<li data-filtervalue='DENIED' data-app-event='admin_orders|orderListFiltersUpdate'>Denied</li>
@@ -54,23 +54,23 @@
 			
 			<section class='clearfix'>
 			<h4>Payment Type:</h4>
-			<ul id='orderListFilterPaymentType' class='noPadOrMargin filterGroup' data-filter='PAYMENT_METHOD'>
+			<ul id='orderListFilterPaymentType' class='noPadOrMargin listStyleNone filterGroup' data-filter='PAYMENT_METHOD'>
 				<li data-filtervalue='PAYPAL' data-app-event='admin_orders|orderListFiltersUpdate'>PayPal</li>
 				<li data-filtervalue='CASH' data-app-event='admin_orders|orderListFiltersUpdate'>Cash</li>
-				<li data-filtervalue='CRED'data-app-event='admin_orders|orderListFiltersUpdate'>Credit</li>
+				<li data-filtervalue='CRED' data-app-event='admin_orders|orderListFiltersUpdate'>Credit</li>
 			</ul>
 			</section>
 			
 			
 			<section class='clearfix'>
 			<h4>Marketplace:</h4><!-- in integrations file OR in zoovy.pm (line 2613) -->
-			<ul id='orderListFilterMarket' class='noPadOrMargin filterGroup' data-filter='MKT'>
-				<li data-filtervalue='EBY'data-app-event='admin_orders|orderListFiltersUpdate'>eBay</li>
-				<li data-filtervalue='AMZ'data-app-event='admin_orders|orderListFiltersUpdate'>Amazon</li>
+			<ul id='orderListFilterMarket' class='noPadOrMargin listStyleNone filterGroup' data-filter='MKT'>
+				<li data-filtervalue='EBF' data-app-event='admin_orders|orderListFiltersUpdate'>eBay</li>
+				<li data-filtervalue='AMZ' data-app-event='admin_orders|orderListFiltersUpdate'>Amazon</li>
 			</ul>
 			</section>
 
-			<div class='marginBottom marginTop'><label># orders: <input type='number' max="250" min="1" id='filterLimit' value='30' size='3' /></label></div>
+			<div class='marginBottom marginTop'><label># orders: <input type='number' max="250" min="1" id='filterLimit' value='30' size='3'  data-app-event='admin_orders|orderListFilterLimitUpdate' /></label></div>
 <!--			<button class='marginBottom' data-app-event='admin_orders|orderListFiltersUpdateButton'>Show Results</button> -->
 	
 		</div>
@@ -135,13 +135,13 @@
 			<th></th>
 			<th data-name='ORDERID' title='order id'>order id</th>
 			<th data-name='ORDER_BILL_NAME' title='billing full name'>customer</th>
-			<th data-name='ORDER_TOTAL' title='order total'>total</th>
-			<th data-name='ORDER_ITEMS' title='order total'>items</th>
-			<th data-name='ORDER_PAYMENT_METHOD' title='payment method'>method</th>
+			<th class='hideInMinimalMode' data-name='ORDER_TOTAL' title='order total'>total</th>
+			<th class='hideInMinimalMode' data-name='ORDER_ITEMS' title='order total'>items</th>
+			<th class='hideInMinimalMode' data-name='ORDER_PAYMENT_METHOD' title='payment method'>method</th>
 			<th data-name='ORDER_PAYMENT_STATUS' title='order payment status'>status</th>
-			<th data-name='CREATED_GMT' title='date order created'>created</th>
-			<th data-name='ORDER_SHIP_ZONE' title='shipping destination'>dest.</th>
-			<th data-name='REVIEW_STATUS' title='fraud review status'>fraud</th>
+			<th class='hideInMinimalMode' data-name='CREATED_GMT' title='date order created'>created</th>
+			<th class='hideInMinimalMode' data-name='ORDER_SHIP_ZONE' title='shipping destination'>dest.</th>
+			<th class='hideInMinimalMode' data-name='REVIEW_STATUS' title='fraud review status'>fraud</th>
 			<th data-name='FLAGS' title='fraud review status'>flags</th>
 			<th data-name='REVIEW_STATUS' title='order status'>pool</th>
 			<th></th>
@@ -167,18 +167,18 @@
 	<td class='statusIcon'></td>
 	<td><span data-bind='var:order(ORDERID);format:text;' class='orderid'></span></td>
 	<td><span data-bind='var:order(ORDER_BILL_NAME);format:text;'></span></td>
-	<td><span data-bind='var:order(ORDER_TOTAL);format:money; currencySign: $;  hideZero:false;'></span></td>
-	<td><span data-bind='var:order(ITEMS);format:text;'></span></td>
-	<td><span data-bind='var:order(ORDER_PAYMENT_METHOD);format:text;'></span></td>
+	<td class='hideInMinimalMode'><span data-bind='var:order(ORDER_TOTAL);format:money; currencySign: $;  hideZero:false;'></span></td>
+	<td class='hideInMinimalMode'><span data-bind='var:order(ITEMS);format:text;'></span></td>
+	<td class='hideInMinimalMode'><span data-bind='var:order(ORDER_PAYMENT_METHOD);format:text;'></span></td>
 	<td><span data-bind='var:order(ORDER_PAYMENT_STATUS);format:paystatus;extension:admin_orders;'></span></td>
-	<td><time data-bind='var:order(CREATED_GMT);format:unix2mdy;'></time></td>
-	<td><span data-bind='var:order(ORDER_SHIP_ZONE);format:billzone;extension:admin_orders;'></span></td>
-	<td><span data-bind='var:order(REVIEW_STATUS);format:reviewStatus;extension:admin_orders;'></span></td>
+	<td class='hideInMinimalMode'><time data-bind='var:order(CREATED_GMT);format:unix2mdy;'></time></td>
+	<td class='hideInMinimalMode'><span data-bind='var:order(ORDER_SHIP_ZONE);format:billzone;extension:admin_orders;'></span></td>
+	<td class='hideInMinimalMode'><span data-bind='var:order(REVIEW_STATUS);format:reviewStatus;extension:admin_orders;'></span></td>
 	<td><span data-bind='var:order(FLAGS);format:orderFlagsAsSpans; extension:admin_orders;'></span></td>
 	<td><span data-bind='var:order(POOL);format:text;'></span></td>
-	<td NOWRAP>
-	<button data-app-event="admin_orders|orderUpdateShowEditor"  data-bind='var:order(ORDERID);format:assignAttribute; attribute:data-orderid;'>Edit</button>
-	<button data-app-event="admin_orders|orderUpdateQuickview"  data-bind='var:order(ORDERID);format:assignAttribute; attribute:data-orderid;'>QuickView</button>
+	<td NOWRAP class='alignRight'>
+	<button data-app-event='admin_orders|orderUpdateShowEditor'  data-bind='var:order(ORDERID);format:assignAttribute; attribute:data-orderid;'>Edit</button>
+	<button class='hideInMinimalMode' data-app-event="admin_orders|orderUpdateQuickview"  data-bind='var:order(ORDERID);format:assignAttribute; attribute:data-orderid;'>QuickView</button>
 	<menu class='displayNone orderQuickviewMenu'>
 		<h3>Quickview</h3>
 		<li data-app-event="admin_orders|qvOrderInvoice">Invoice</li>
@@ -221,8 +221,9 @@ That'll allow us to easily change the viewer from a modal to a plain dialog to a
 		<div data-bind="var:order(cart/refer);format:text; pretext: meta: ;"></div>
 		<div data-bind="var:order(cart/ip_address);format:text; pretext: IP Address: ;"></div>
 		<div data-bind="var:order(our/order_ts); format:unix2mdy; showtime:1;"></div>
-		<div data-bind='var: cart(sum/order_total); format:money; hideZero:false; currencySign: $; pretext:Order Total: ;'></div>
-		<div><b data-bind='var: cart(sum/balance_due_total); format:orderBalance; hideZero:false; currencySign: $; pretext:Balance Due: ; extension:store_cart;'></b></div>
+		<div data-bind='var: order(sum/order_total); format:money; hideZero:false; currencySign: $; pretext:Order Total: ;'></div>
+		<div><b data-bind='var: order(sum/balance_due_total); format:orderBalance; hideZero:false; currencySign: $; pretext:Balance Due: ; extension:store_cart;'></b></div>
+		<h6 data-bind='var: order(want/po_number); format:text; pretext:PO #: ;'></h6>
 	</hgroup>
 
 	<div class='floatRight marginRight marginLeft shipAddressContainer topCol'>
@@ -347,7 +348,7 @@ That'll allow us to easily change the viewer from a modal to a plain dialog to a
 		<h3>Customer Notes: </h3>
 		<div class='editable marginBottom'  data-ui-role='admin_orders|ADDCUSTOMERNOTE'></div>
 		<table class='gridTable marginTop'>
-		<tbody data-bind='var:order(%CUSTOMER/@NOTES);format:processList;loadsTemplate:buyerNotesTemplate;'>
+		<tbody data-bind='var:order(@NOTES);format:processList;loadsTemplate:buyerNotesTemplate;'>
 		</tbody>
 		</table>
 	</div>
@@ -381,7 +382,6 @@ That'll allow us to easily change the viewer from a modal to a plain dialog to a
 		<th>Date</th>
 		<th>Action</th>
 		<th>Amt. Paid</th>
-		<th>Amt. Due</th>
 		<th>Tender</th>
 		<th title='Transaction ID'>TID</th>
 		<th>Notes</th>
@@ -472,7 +472,6 @@ The following templates are used in the 'order detail' modal/view.
 	<td><time data-bind='var: payment(ts); format:unix2mdy; showtime:true;'></time></td>
 	<td><div data-bind="format:paymentActions; extension:admin_orders; useParentData:true;"></div></td>
 	<td><span data-bind='var: payment(amt); format:money;'></span></td>
-	<td><span data-bind='var: payment(due); format:money;'></span></td>
 	<td><span data-bind='var: payment(tender); format:text;'></span></td>
 	<td><span data-bind='var: payment(uuid); format:text;'></span></td>
 	<td>
@@ -517,8 +516,10 @@ The following templates are used in the 'order detail' modal/view.
 		<div class='prodOptions stuffProdOptions' data-bind='var: order(%options); format:selectedOptionsDisplay;'></div>
 	</td>	
 	
-	<td><input type='number' name='qty' data-bind="var: order(qty); format:popVal;" size='3' /></td>
-	<td><input type='number' name='price' data-bind="var: order(base_price); format:popVal;" size='7' step='0.01' min='0' /></td>
+<!--	<td><input type='number' name='qty' data-bind="var: order(qty); format:popVal;" size='3' /></td> -->
+	<td data-bind="format:orderEditQtyInput; extension:admin_orders; useParentData:true;"></td>
+	<td data-bind="format:orderEditPriceInput; extension:admin_orders; useParentData:true;"></td>
+<!--	<td><input type='number' name='price' data-bind="var: order(price); format:popVal;" size='7' step='0.01' min='0' /></td> -->
 	<td class='sum'><span data-bind='var: order(extended); format:money; currencySign: $; hideZero:false; pretext: = ;'></span></td>
 	<td><button data-app-event="admin_orders|orderItemUpdate">Update Item Price and/or Quantity</button></td>
 	<td><button data-app-event="admin_orders|orderItemRemove">Remove From Order</button></td>
@@ -590,7 +591,7 @@ The following templates are used both in the order editor AND in quickview.
 </div>
 
 <div id='orderTrackingHistoryContainerTemplate'>
-	<table class='gridTable'>
+	<table class='gridTable' data-app-role='trackingInformation'>
 	<thead>
 	<tr>
 		<th>Date</th>
