--- a/extensions/admin/product_editor.html
+++ b/extensions/admin/product_editor.html
@@ -97,14 +97,15 @@
 		
 	<td>
 	<div class='prodThumbContainer'>
-	<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:imageURL;isElastic:1; bgcolor:ffffff;' width='35' height='35' />
+	<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:imageURL;isElastic:1; bgcolor:ffffff;' width='45' height='45' />
 	</div>
 	</td>
-	<td>
-	<div><span data-bind='var: product(pid); defaultVar: product(_id); format:text;'></span> - <span data-bind='var: product(prod_name); format:text;'></span></div>
-	<div data-bind='var: product(base_price); format:money; isElastic:1; currencySign: $;  hideZero:false;'></div>
-	</td>
-	<td><button onClick="app.ext.admin_prodEdit.a.showPanelsFor($(this).closest('[data-pid]').attr('data-pid'));">Edit</button></td>
+	<td data-bind='var: product(pid); defaultVar: product(_id); format:text;'></td>
+	<td class='hideInMinimalMode'><div data-bind='var: product(prod_name); format:text;'></div></td>
+	<td data-bind='var: product(base_price); format:money; isElastic:1; currencySign: $;  hideZero:false;'></td>
+	<td class='hideInMinimalMode' data-bind='var:product(pogs); format:showTrueIfSet; extension:admin;'></td>
+	<td class='hideInMinimalMode' data-bind='var:product(child_pids); format:arrayLength; extension:admin;'></td>
+	<td align='right'><button data-app-event='admin_prodEdit|showProductEditor'>Edit</button></td>
 </tr>
 
 
@@ -134,24 +135,23 @@
 
 <form name="createNewProductForm" action="#" method="POST" onSubmit="app.ext.admin_prodEdit.u.handleCreateNewProduct($(this).serializeJSON()); return false;">
 	
-<fieldset class='marginBottom'>
+<fieldset class='marginBottom labelsAsBreaks alignedLabels alignedInputs'>
 	<legend>Required Fields</legend>
 
-	<div class='marginBottom'><label>Product ID/SKU:</label> <input type="text" name="pid" SIZE="20" MAXLENGTH="20" VALUE="" required='required' /></div>			
-	<div class='marginBottom'><label >Product Name:</label> <INPUT TYPE="text" NAME="zoovy:prod_name" SIZE="55" maxlength="55" VALUE="" required='required' /></div>			
-	<div class='marginBottom'><label >Sell For Price:</label> $<INPUT TYPE="number" NAME="zoovy:base_price" VALUE="" SIZE="15" required='required' step='0.01' min='0'></div>
+	<label><span>Product ID/SKU: </span><input type="text" name="pid" SIZE="20" MAXLENGTH="20" VALUE="" required='required' /></label>
+	<label ><span>Product Name: </span><INPUT TYPE="text" NAME="zoovy:prod_name"  maxlength="55" VALUE="" required='required' /></label>
+	<label ><span>Sell For Price: </span>$<INPUT TYPE="number" NAME="zoovy:base_price" VALUE="" SIZE="15" required='required' step='0.01' min='0'></label>
 			
 </fieldset>
 
-<fieldset>
+<fieldset class='marginBottom labelsAsBreaks alignedLabels'>
 	<legend>Recommended Data</legend>
-	<div class='marginBottom'><label >Your Cost:</label> $<INPUT TYPE="number" NAME="zoovy:base_cost" VALUE="" SIZE="7" step='0.01' min='0'></div>	
-	<div class='marginBottom'><label >Product Description:</label> <TEXTAREA NAME="zoovy:prod_desc" COLS=40 ROWS=5></TEXTAREA></div>	
-	<div class='marginBottom'><label >Base Weight:</label> <INPUT TYPE="text" NAME="zoovy:base_weight" VALUE="" SIZE="8"> ounces (use # for pounds)</div>	
-	<div class='marginBottom'><label >Is product taxable?:</label> 
+	<label ><span>Your Cost: </span>$<INPUT TYPE="number" NAME="zoovy:base_cost" VALUE="" SIZE="7" step='0.01' min='0'></label>
+	<label ><span>Product Description:</span><TEXTAREA NAME="zoovy:prod_desc" COLS=40 ROWS=5></TEXTAREA></label>
+	<label ><span>Base Weight:</span><INPUT TYPE="text" NAME="zoovy:base_weight" VALUE="" SIZE="8"> ounces (use # for pounds)</label>
+	<label ><span>Is product taxable?:</span></label> 
 		<INPUT TYPE='radio' NAME='zoovy:taxable' VALUE='1' checked>&nbsp;Yes
         <INPUT TYPE='radio' NAME='zoovy:taxable' VALUE='0' >&nbsp;No
-		</div>
 	
 </fieldset>		
 		
@@ -335,7 +335,6 @@
 	<td><input type="textbox" value="" name="overstock:note" maxlength="60" size="60" data-bind="var: product(overstock:note); format:popVal;"></td>
 </tr>
 
-
 <tr>
 	<td><label><input type="checkbox" name="bing:ts" data-bind="var: product(bing:ts); format:popCheckbox;"> Bing:</label></td>
 	<td></td>
@@ -349,6 +348,13 @@
 	<td></td>
 	<td></td>
 	<td><input type="textbox" value="" name="sears:note" maxlength="60" size="60" data-bind="var: product(sears:note); format:popVal;"></td>
+</tr>
+
+<tr>
+	<td><label><input type="checkbox" name="newegg:ts" data-bind="var: product(newegg:ts); format:popCheckbox;"> Newegg:</label></td>
+	<td></td>
+	<td></td>
+	<td><input type="textbox" value="" name="newegg:note" maxlength="60" size="60" data-bind="var: product(newegg:note); format:popVal;"></td>
 </tr>
 
 <tr>
