--- a/extensions/admin/templates.html
+++ b/extensions/admin/templates.html
@@ -137,9 +137,13 @@ PRODUCT FINDER/CHOOSER
 	<h5 data-bind='var: product(zoovy:prod_mfgid); format:text; pretext: Mfg ID: ;'></h5>
 	<h4 class='basePrice' data-bind='var: product(zoovy:base_price); format:money; currencySign: $;  hideZero:true; pretext: Our Price: ;'></h4>
 	<h5 class='prodMSRP' data-bind='var: product(zoovy:prod_msrp); format:money; currencySign: $;  hideZero:true; pretext: MSRP: ;'></h5>
+	
+	
+	
 	</td>
 </tr>
 </table>
+<div data-bind='useParentData:true; format:detailedInvDisplay; extension:store_product;' class='inventory'></div>
 	<form action='#' onSubmit="return false;">
 	<input type='hidden' data-bind='var: product(pid); format:popVal;' name='sku' />
 		<fieldset data-bind='var: product(pid); format:atcVariations; extension:store_product;' class='borderNone'></fieldset>
@@ -380,11 +384,13 @@ SETUP PAGE TEMPLATE
 			<a href="#" onClick="navigateTo('/biz/setup/checkout/index.cgi?MODE=CUSTOMERADMIN'); return false;" title="/biz/setup/checkout/index.cgi?MODE=CUSTOMERADMIN">Customer Admin Config</a><br />
 			<div class="helper">Configure what options customers have when they login to their accounts on your store.</div>
 			
+			<div class='showForZoovyOnly'>
 			<a href="#" onClick="navigateTo('/biz/setup/checkout/index.cgi?MODE=SYS-MESSAGES'); return false;" title="/biz/setup/checkout/index.cgi?MODE=SYS-MESSAGES">System Messages</a><br />
 			<div class="helper">Customize System Messages used throughout the site</div>
 			
 			<a href="#" onClick="navigateTo('/biz/setup/checkout/index.cgi?MODE=CHK-MESSAGES'); return false;" title="/biz/setup/checkout/index.cgi?MODE=CHK-MESSAGES">Checkout Messages</a><br />
 			<div class="helper">Customize Checkout Messaging used during checkout.</div>
+			</div>
 			
 			<a href="#" onClick="navigateTo('/biz/setup/checkout/index.cgi?MODE=INTERNATIONAL'); return false;" title="/biz/setup/checkout/index.cgi?MODE=INTERNATIONAL">Languages &amp; Currencies</a><br />
 			<div class="helper">Configure which languages and currencies are available.</div>
@@ -481,11 +487,11 @@ SETUP PAGE TEMPLATE
 <div id='pageTemplateSetupAppchooser' class='page pageSetup pageSetupAppchooser clearfix'>
 
 	<div class='floatLeft marginRight marginBottom ui-widget alignCenter' data-appid='avalanche' data-app-repo='https://github.com/zoovy/AnyCommerce-Development/'>
-		<div class='ui-widget-header ui-corner-top spacedLetters uppercase smallPadding'>Avalanche</div>
+		<div class='ui-widget-header ui-corner-top spacedLetters uppercase smallPadding'>avalanche</div>
 		<div class='ui-widget-content ui-corner-bottom stdPadding'>
-			<div class='marginBottom'><img src='https://static.zoovy.com/graphics/wrappers/2011_avalanche/preview.jpg' width='280' height='200' alt='Avalanche' /></div>
+			<div class='marginBottom'><img src='https://static.zoovy.com/graphics/wrappers/2011_avalanche/preview.jpg' width='280' height='200' alt='Fashion' /></div>
 			<div >
-				<!--<button class='smallButton' data-app-event="admin|appChooserAppDetails">Details</button>-->
+				<button class='smallButton' data-app-event="admin|appChooserAppPreview">Preview</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppChoose">Choose</button>
 				<button class='smallButton' data-app-event="admin|appChooserFork">Fork</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppDownload">Download</button>
@@ -498,7 +504,7 @@ SETUP PAGE TEMPLATE
 		<div class='ui-widget-content ui-corner-bottom stdPadding'>
 			<div class='marginBottom'><img src='https://static.zoovy.com/graphics/wrappers/2011_shadow/preview.jpg' width='280' height='200' alt='shadow' /></div>
 			<div>
-				<!--<button class='smallButton' data-app-event="admin|appChooserAppDetails">Details</button>-->
+				<button class='smallButton' data-app-event="admin|appChooserAppPreview">Preview</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppChoose">Choose</button>
 				<button class='smallButton' data-app-event="admin|appChooserFork">Fork</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppDownload">Download</button>
@@ -511,7 +517,7 @@ SETUP PAGE TEMPLATE
 		<div class='ui-widget-content ui-corner-bottom stdPadding'>
 			<div class='marginBottom'><img src='https://static.zoovy.com/graphics/wrappers/2011_crispnclean/preview.jpg' width='280' height='200' alt='crisp n clean' /></div>
 			<div>
-				<!--<button class='smallButton' data-app-event="admin|appChooserAppDetails">Details</button>-->
+				<button class='smallButton' data-app-event="admin|appChooserAppPreview">Preview</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppChoose">Choose</button>
 				<button class='smallButton' data-app-event="admin|appChooserFork">Fork</button>
 				<button class='smallButton' data-app-event="admin|appChooserAppDownload">Download</button>
@@ -847,7 +853,7 @@ UTILITIES PAGE TEMPLATE
 		</div>
 		
 		<div class='stdPadding ui-widget-content ui-corner-bottom'>
-		
+		<a href="#" onClick="navigateTo('#!customerManager'); return false;">Customer Manager (beta)</a><br />
 		<a href="#" onClick="navigateTo('/biz/manage/customer/index.cgi'); return false;">Customer Manager</a>
 		<div class="helper">Find or create a customer record for your website.</div>
 		
@@ -934,16 +940,10 @@ UTILITIES PAGE TEMPLATE
 		<a href="#" onClick="navigateTo('/biz/manage/diskspace/index.cgi'); return false;">Disk Space Manager</a><br />
 		<div class="helper">Manage the amount of disk space in use by your account.</div>	
 	
-		<a href="#" onClick="navigateTo('/biz/manage/image/imgassoc/index.cgi'); return false;">Image Associations</a><br />
-		<div class="helper">View a list of images, and the products they are associated with</div>
-	
 		<a href="#" onClick="navigateTo('/biz/syndication/sitemap/index.cgi'); return false;">Static Google SiteMap</a><br />
 		<div class="helper">Configure nightly generation of a static sitemap file.</div>
 	
-		<a href="#" onClick="navigateTo('/biz/manage/debugger/index.cgi'); return false;">Website Debugger</a><br />
-		<div class="helper">Website Debugger</div>
-	
-		<a href="#" onClick="navigateTo('/biz/manage/custom/zephyrsports.cgi'); return false;">Custom Inventory Lookup</a>
+		<a href="#" onClick="navigateTo('/biz/manage/custom/zephyrsports.cgi'); return false;">Inventory Lookup</a>
 		<div class="helper"></div>
 	
 		<a href="#" onClick="navigateTo('/biz/manage/support/index.cgi'); return false;">Tech Support Utils</a>
@@ -1144,6 +1144,83 @@ PRODUCT TAB
 </form>
 
 </div>
+
+
+
+
+
+
+
+
+
+
+<!--
+
+########################################################
+
+
+WEBDOC
+
+########################################################
+
+
+-->
+
+<div id='helpDocumentTemplate'>
+	<p class='helper'>hint: you can shrink or expand this window and continue to browse the interface</p>
+	<div data-bind="var: help(body); format:text;"></div>
+</div>
+
+<table>
+<tr id='helpSearchResultsTemplate' onClick="app.ext.admin.u.showHelpInDialog($(this).data('docid'));" class='pointer'>
+	<td data-bind='var: help(title); format:text;'></td>
+	<td class='hideInDetailMode'>
+	<p data-bind='var: help(summary); format:text;'></p>
+	<div data-bind='var: help(docid); format:text;'></div>
+	</td>
+	<td data-bind='var: help(score); format:text;'></td>
+</tr>
+</table>
+
+<div id='helpPageTemplate' class='page pageHelp' data-app-role='dualModeContainer' data-app-mode='list'>
+
+	<section class='dualModeDetailContainer' data-app-role='dualModeDetail'></section>
+
+	<section class='dualModeListContainer' data-app-role='dualModeList'>
+		<div class='ui-widget-header ui-corner-top'>
+		
+			<div class='buttonSet'>
+				<button data-app-event='admin|toggleDualMode'>Toggle between list and detail view</button>
+			</div>
+			
+			<form class='searchBar floatRight' action='#' data-app-role='helpSearch'>
+				<input type='search' name='keywords'  />
+				<button data-app-event='admin|helpSearch'>Search</button>
+			</form>
+			
+			
+			<h3 class='heading'>Documentation</h3>
+		</div>
+		
+		<div class='ui-widget-content ui-corner-bottom'>
+		
+		<div class='dualModeListMessaging stdPadding'>Please use the search above to find the docs you are looking for.</div>
+		
+		<table class='gridTable fullWidth displayNone' >
+		<!-- thead is needed, whether visible or not, so that the data-name attributes can be used to look up column # -->
+		<thead>
+		<tr>
+			<th>title</th>
+			<th class='hideInDetailMode'>Summary/id</th>
+			<th>Relevance</th>
+		</tr>
+		</thead>
+		<tbody data-bind="var: users(@RESULTS); format:processList; loadsTemplate:helpSearchResultsTemplate;" class='dualModeList' data-app-role='dualModeListContents'></tbody>
+		</table>
+		</div>
+	</section>
+</div>
+
 
 
 
