--- a/extensions/admin/user.html
+++ b/extensions/admin/user.html
@@ -6,7 +6,7 @@
 		<div class='ui-widget-header ui-corner-top'>
 			<div class='buttonSet'>
 				<button data-app-event='admin_user|bossUserCreate'>Create A New User</button>
-				<button data-app-event='admin_user|toggleDualMode'>Toggle between list and detail view</button>
+				<button data-app-event='admin|toggleDualMode'>Toggle between list and detail view</button>
 			</div>
 			<h3 class='heading'>User List</h3>
 		</div>
@@ -41,11 +41,11 @@
 		<td data-bind="var: user(luser); format:text;"></td>
 		<td class='hideInDetailMode' data-bind="var: user(fullname); format:text;"></td>
 		<td class='hideInDetailMode' data-bind="var: user(email); format:text;"></td>
-		<td data-bind="var: user(@roles); format:array2ListItems; extension:admin;" class='ulAsCSV'></td>
+		<td><ul data-bind="var: user(@roles); format:array2ListItems; extension:admin;" class='ulAsCSV'></ul></td>
 		<td class='hideInDetailMode' data-bind="var: user(created_gmt); format:unix2mdy;"></td>
 		<td>
 		<button data-app-event="admin_user|bossUserDetail">edit</button>
-		<button data-app-event="admin_user|bossUserDelete" class='marginLeft'>delete</button>
+		<button data-app-event="admin_user|bossUserDelete" class='marginLeft hideInDetailMode'>delete</button>
 		</td>
 	</tr>
 
