--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ css files should be included before any .js file to ensure they are downloaded i
 
 
 <script type="text/javascript">
-app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
+app.u.loadScript(app.vars.baseURL+"app-init.js");
 </script>
 
 
