Checkout load fix, create account, code cleanup

--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@ if you change these, you should move them above this comment so that when you (o
 
 
 <!-- loadingBG needed on this for app init (content may take a moment to load) -->
-<div id='customerTemplate' class='clearfix loadingBG contentContainer'>
+<div id='customerTemplate' class='clearfix contentContainer'>
 
 	<div class='sideline' >
 	<nav id='customerNav'>
