Paypal login required

--- a/extensions/checkout/required.html
+++ b/extensions/checkout/required.html
@@ -120,8 +120,10 @@ not used in required
 
 
 </div>
+	<!--
+	DISABLING ACCOUNT CREATE RIGHT NOW -- NEEDS LOTS OF WORK
 	<label class='accountCreateContainer'><input type='checkbox' name='want/create_customer' data-app-event='orderCreate|tagAsAccountCreate' />Create customer account</label>
-
+	-->
 </section>
 
 
