Returning from paypal session passed

--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,7 @@ if you change these, you should move them above this comment so that when you (o
 		<li><a href='#customer?show=changepassword' id='navLink_changepassword'>Change Password</a></li>
 		<li><a href='#customer?show=orders' id='navLink_orders'>Order History</a></li>
 		<li><a href='#customer?show=lists' id='navLink_orders'>Manage Lists</a></li>
+		<li class='hideIfLoggedOut'><a href="#" onClick="app.ext.myRIA.u.handleLogoutActions(); return false;">Log Out</a></li>
 	</ul>
 	</nav>
 	</div>
