--- a/index.html
+++ b/index.html
@@ -1172,6 +1172,12 @@ subscribeListsArticle is used for authenticated buyers
 			<h1>Subscribe to our Newsletter and Save!</h1>
 			<div data-bind="format:loadsTemplate; loadsTemplate:subscribeFormTemplate;"></div>
 		</div>
+		
+		<div id="createAccountArticle" class="displayNone textContentArea">
+			<form onSubmit="">
+			
+			</form>
+		</div>
 
 		<div id='subscriberListsArticle' class='displayNone textContentArea'>
 			<h1>Manage your Subscriptions</h1>
