appBuyerCreate setup- hijack finished

--- a/index.html
+++ b/index.html
@@ -1174,8 +1174,8 @@ subscribeListsArticle is used for authenticated buyers
 		</div>
 		
 		<div id="createAccountArticle" class="displayNone textContentArea">
-			<form onSubmit="">
-			
+			<form onSubmit="app.calls.appBuyerCreateHijack();">
+				<input type="submit" value="GO"/>
 			</form>
 		</div>
 
