Checkout create account form added

--- a/extensions/checkout/required.html
+++ b/extensions/checkout/required.html
@@ -120,9 +120,9 @@ not used in required
 
 
 </div>
+	<label class='accountCreateContainer loginHide'><input type='checkbox' name='want/create_customer' data-app-event='orderCreate|tagAsAccountCreate' />Create customer account</label>
 	<!--
 	DISABLING ACCOUNT CREATE RIGHT NOW -- NEEDS LOTS OF WORK
-	<label class='accountCreateContainer'><input type='checkbox' name='want/create_customer' data-app-event='orderCreate|tagAsAccountCreate' />Create customer account</label>
 	-->
 </section>
 
@@ -197,9 +197,17 @@ don't add required to any inputs because if bill to ship is checked, NONE of the
 
 <!-- a panel that only appears in 'nice' -->
 <section id='chkoutAccountCreateTemplate'>
+<div>
+	<div class="createAccountMessaging"></div>
+	<div><input type="email" data-permissions-field="email" placeholder="Email" required='required' name='createAccountFirstName' /></div>
+	<div><input type="text" data-permissions-field="firstname" placeholder="First Name" required='required' name='createAccountFirstName' /></div>
+	<div><input type="text" data-permissions-field="lastname" placeholder="Last Name" required='required' name='createAccountLastName' /></div>
+	<div><input type='password' data-permissions-field="password" data-minlength='8' placeholder='password' required='required' name='createAccountPassword' size='12' /> <span class='hint'>must be at least 8 characters</span></div>
+	<div><input type='password' data-minlength='8' placeholder='verify password' required='required'  name='createAccountPasswordConfirm' size='12' /></div>
+	<button class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" onClick="app.ext.store_gkworld.a.createAccount($(this).parent(), 'Your account has been created, log in above!');" ><span class="ui-button-text">Create Account</span></button>
+</div>
 
-<div><input type='password' data-minlength='8' placeholder='password' required='required' name='want/new_password' size='12' data-bind='var: cart(want/new_password); format:popVal;' /> <span class='hint'>must be at least 8 characters</span></div>
-<div><input type='password' data-minlength='8' placeholder='verify password' required='required'  name='want/new_password2' size='12' data-bind='var: cart(want/new_password2); format:popVal;' /></div>
+<!--
 <label>Recovery Question
 <select name='want/recovery_hint' data-bind='var: cart(want/recovery_hint); format:popVal;'>
 	<option value='2'>Name of your favorite childhood pet?</option>
@@ -210,7 +218,7 @@ don't add required to any inputs because if bill to ship is checked, NONE of the
 </label>
 
 <input type='text' placeholder='recovery answer' required='required' value='' name='want/recovery_answer' maxlength='20' size='20'  data-bind='var: cart(want/recovery_answer); format:popVal;' /></label>
-
+-->
 </section>
 
 
