--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@ subscribeListsArticle is used for authenticated buyers
 		<div id="createAccountArticle" class="displayNone textContentArea">
 			<form action="" onSubmit="app.ext.store_gkworld.a.createAccount($(this)); return false;"/>
 				
-				<div class="messaging"></div>
+				<div class="createAccountMessaging"></div>
 				<fieldset>
 					<div>
 						<label>Email Address</label>
